# voxia-open

./: .gitignore  LICENSE  README.md  README_ja.md  pyproject.toml
examples/: demo.py
src/examples/: demo.py  demo_stream.py
src/path/to/model_dir/: style_vectors.npy
src/voxia/: __init__.py  cli.py  server.py  tts.py
src/voxia/adapters/: __init__.py  base.py  sbv2_adapter.py
src/voxia/agent/: agent.py  pipeline.py  request.py  response.py  voice_loop.py
src/voxia/api/: app.py  schemas.py
src/voxia/formats/: sbv2_loader.py  schema.py
src/voxia/model/: __init__.py  attn_vits.py  dec_hifigan.py  encoder_vits.py  sbv2_native.py
src/voxia/nlp/: __init__.py  japanese_pipeline.py
src/voxia/runtime/: __init__.py  audio_buffer.py  base.py  decoder_stream.py  engine.py  pipeline.py  request.py  runtime.py  scheduler.py  stream.py  stream_engine.py  types.py
