[project]
name = "voxia"
version = "0.1.0"
description = "Fast Voice AI runtime for streaming text-to-speech"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "torch",
  "numpy",
  "PyYAML",
  "safetensors",
  "packaging",
  "fastapi",
  "uvicorn",
  "pydantic"
]

[project.scripts]
voxia = "voxia.cli:main"